# rafael

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  renovate.json
.github/instructions/: rust.instructions.md
.github/workflows/: deploy-chat.yml  deploy-lift.yml  deploy-payme.yml  payme-web-ci.yml  rust-ci.yml
crates/: AGENTS.md  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/events/: Cargo.toml
crates/events/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs  sqlite.rs
crates/tool-registry/: Cargo.toml
crates/tool-registry/src/: lib.rs
crates/tools/docker/: Cargo.toml
crates/tools/docker/src/: lib.rs
crates/tools/filesystem/: Cargo.toml
crates/tools/filesystem/src/: lib.rs
crates/tools/git/: Cargo.toml
crates/tools/git/src/: lib.rs
crates/tools/shell/: Cargo.toml
crates/tools/shell/src/: lib.rs
crates/tools/systemd/: Cargo.toml
crates/tools/systemd/src/: lib.rs
crates/tools/tailscale/: Cargo.toml
crates/tools/tailscale/src/: lib.rs
crates/tools/web/: Cargo.toml
crates/tools/web/src/: lib.rs
docs/: ai-collaborator-progress.md  ai-collaborator.md  chat-system-prompt-implementation.md  memory-idea.md  rafael-specs.txt  rafael.md  web-search-quality-implementation.md  web-search-structured-controls-implementation.md
infra/docker/searxng/: .gitignore  README.md  docker-compose.yml  settings.yml.example
infra/systemd/: README.md  llama-server.service  llama-swap.service  llama-swap.yaml  rafael-chat.service  rafael-coding.service  rafael-lift.service  rafael-payme.service
services/: AGENTS.md
services/chat/: Cargo.toml  README.md
services/chat/src/: auth.rs  config.rs  main.rs  model.rs  prompts.rs  server.rs  store.rs  tools.rs  types.rs
services/chat/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/chat/web/src/: App.tsx  api.ts  display.ts  main.tsx  styles.css  themes.ts  types.ts
services/chat/web/src/components/: ActivityIndicator.tsx  AuthPanel.tsx  ChatPanel.tsx  CopyButton.tsx  CustomSelect.tsx  LazyCopyButton.tsx  MarkdownContent.tsx  MessageThread.tsx  SettingsPanel.tsx  Sidebar.tsx
services/chat/web/src/components/settings/: AccountSettings.tsx  DataSettings.tsx  GeneralSettings.tsx  MemorySettings.tsx  ModelDetails.tsx  SettingsControls.tsx
services/coding/: .env.example  Cargo.toml  README.md
services/coding/src/: change_execution.rs  config.rs  github.rs  main.rs  model.rs  publish.rs  repo_context.rs  server.rs  types.rs  verification.rs  webhook.rs  worker.rs
services/coding/src/change_execution/: actions.rs  content.rs  git.rs  history.rs  limits.rs  parser.rs  prompt.rs  sandbox.rs  search.rs  text.rs  transcript.rs  types.rs  write.rs
services/coding/src/worker/: comments.rs  git.rs  paths.rs  phases.rs  pr_revision.rs  state.rs
services/homelab/: Cargo.toml
services/lift/: README.md
services/lift/backend/: Cargo.toml
services/lift/backend/src/: config.rs  db.rs  lib.rs  main.rs
services/lift/frontend/: index.html  package-lock.json  package.json  vite.config.ts
services/lift/frontend/src/: App.tsx  api.ts  styles.css  types.ts
services/payme/: .env.example  .gitignore  README.md  package.json  run.sh
services/payme/.github/workflows/: ci.yml  tests.yml
services/payme/backend/: Cargo.toml
services/payme/backend/src/: config.rs  lib.rs  main.rs
services/payme/backend/src/db/: mod.rs
services/payme/backend/src/handlers/: auth.rs  budget.rs  export.rs  fixed_expenses.rs  income.rs  items.rs  mod.rs  monthly_data.rs  months.rs  retirement_breakdown.rs  savings.rs  savings_goals.rs  stats.rs
services/payme/backend/src/middleware/: auth.rs
services/payme/backend/src/models/: mod.rs
services/payme/backend/src/openapi/: mod.rs
services/payme/backend/src/pdf/: mod.rs
services/payme/backend/tests/: auth_tests.rs  db_integration.rs  export_tests.rs
services/payme/backend/tests/common/: mod.rs
services/payme/frontend/: package-lock.json  package.json
services/payme/frontend/src/: App.tsx  index.css  main.tsx
services/payme/frontend/src/api/: client.ts
services/payme/frontend/src/components/: BudgetSection.tsx  CustomSavingsGoals.tsx  FixedExpenses.tsx  IncomeSection.tsx  ItemsSection.tsx  Layout.tsx  MonthNav.tsx  RetirementBreakdownCard.tsx  RetirementSavingsCard.tsx  SavingsCard.tsx  Stats.tsx  TransfersCard.tsx
services/payme/frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  ProgressBar.tsx  ReorderControls.tsx  Select.tsx  SortableList.tsx
services/payme/frontend/src/context/: UIPreferencesContext.tsx
services/payme/frontend/src/hooks/: useMonth.ts  useSortableReorder.ts
services/payme/frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  Settings.tsx  Summary.tsx
