[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
futures-util = "0.3.32"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
