[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
common = { path = "../common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["fs", "io-util"] }
