[package]
name = "memory"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
common = { path = "../common" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "rt"] }
