[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
aes-gcm = "0.11.0"
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
client = { path = "../../crates/client" }
common = { path = "../../crates/common" }
config = { path = "../../crates/config" }
jsonwebtoken = { version = "10.4.0", default-features = false, features = ["rust_crypto"] }
memory = { path = "../../crates/memory" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tool-registry = { path = "../../crates/tool-registry" }
tokio = { version = "1.52.3", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-stream = "0.1.18"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
web = { path = "../../crates/tools/web" }
