[package]
name = "coding"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
hex = "0.4.3"
hmac = "0.13.0"
jsonwebtoken = "10.4.0"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["fs", "macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
