[package]
name = "web"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["gzip", "json", "rustls"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt"] }
url = "2.5.8"
