[package]
name = "lift"
version = "0.1.0"
edition = "2021"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]
description = "Minimal workout journal."
readme = "../README.md"

[dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
