[package]
name = "payme"
version = "0.1.0"
edition = "2021"
authors = ["Akrm Al-Hakimi <alhakimiakrmj@gmail.com>"]

description = "Very minimal personal finances tracker."
readme = "../README.md"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["cors", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono"] }
argon2 = "0.5.3"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
chrono = { version = "0.4.45", features = ["serde"] }
printpdf = "0.9.1"
uuid = { version = "1.23.3", features = ["v4"] }
dotenvy = "0.15.7"
time = "0.3.47"
utoipa = { version = "5.5.0", features = ["axum_extras", "chrono" ] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5.8"

[dev-dependencies]
axum-test = "18.7.0"
tower = { version = "0.5.3", features = ["util"] }
tempfile = "3.27.0"
